--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="UTF-8">	
+    <title>Hello World</title>
+	<link href="style.css" rel="stylesheet"/>
+	
 </head>
 <body>
     <h1>This is our git example</h1>
