--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title></title>
 </head>
 <body>
     <h1>This is our git example</h1>
+    <h3>New changes to our example</h3>
+
 
 </body>
 </html>
