--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title></title>
 </head>
 <body>
+
     <h1>This is our git example</h1>
     <h3>New changes to our example</h3>
-
-    <meta charset="UTF-8">	
-    <title>Hello World</title>
-	<link href="style.css" rel="stylesheet"/>
-	
-</head>
-<body>
     <h1>This is our git example</h1>
-	<h2>Test Change from Ai<h2>
-	<h3>Hello World<h3>
-
+    <h2>Test Change from Ai</h2>
+    <h3>Hello World</h3>
 
 </body>
 </html>
