--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>This is our git example</h1>
+    <h2>This is Floreza Git course</h2>
+    <h3>Claus rules the world </h3>
 
 </body>
 </html>
