--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title></title>
+    <title>
+        Playing with GIT
+    </title>
 </head>
 <body>
 
@@ -14,7 +16,8 @@
     <h2>This is Floreza Git course</h2>
     <h3>Claus rules the world </h3>
 
-
-   
+    <p>
+        This is a pharagraf.
+    </p>
 </body>
 </html>
